Dodana mogućnost bilježenja dolaznosti suvlasnika na sastanak